# Nutrivue-Backend

./: .gitignore  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt  vercel.json
migrations/: env.py
migrations/versions/: 179f6690fe39_create_food_logs_table.py  4822ac38538d_create_users_table.py  b77073414780_create_users_table.py  c6e72f9f577a_create_users_table.py  f9994b65939b_create_food_logs_table.py  ff50e6f5384c_create_food_logs_table.py
src/: main.py
src/api/v1/: routers.py
src/api/v1/endpoints/: __init__.py  calorie.py  food_log.py  protected.py  public.py  user.py
src/config/: config.py  firebase.py
src/core/: cache.py  security.py
src/db/: session.py
src/db/models/: food_log.py  user.py
src/db/repositories/: food_log.py  user.py
src/models/: schemas.py
src/services/: gemini.py
